syntax = "proto3";

package blog;

option go_package = "blogpb";

message Post {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreatePostRequest {
    Post post = 1;
}

message CreatePostResponse {
    string message = 1;
    Post post = 2;
}

service BlogService {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse) {};
}
